# cnpj_analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python_test.yml
cnpj_project/: database.py  download_zip.py
tests/cnpj_project/: test_download_zip.py
