[tool.poetry]
name = "cnpj-project"
version = "0.1.0"
description = ""
authors = ["Crystian Pereira <crystian.alexsander@gmail.com>"]
readme = "README.md"
packages = [{include = "cnpj_project"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.28.1"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
