[tool.poetry]
name = "cnpj-project"
version = "0.1.0"
description = ""
authors = ["Crystian Pereira <crystian.alexsander@gmail.com>"]
readme = "README.md"
packages = [{include = "cnpj_project"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
pytest = "^7.2.0"
pytest-order = "^1.0.1"
isort = "^5.11.4"
blue = "^0.9.1"
mypy = "^0.991"
types-requests = "^2.28.11.7"
types-beautifulsoup4 = "^4.11.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
